# fmp-mcp-server

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  mcp.json  pyproject.toml
.github/workflows/: ci.yml  docker.yml
src/fmp_mcp_server/: __init__.py  client.py  server.py
tests/: __init__.py  test_client.py
